Edit homepage all

--- a/index.html
+++ b/index.html
@@ -3,73 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>SarawinB</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <h1>My Portfolio</h1>
-            <nav>
+    
+    <!-- Navigation bar -->
+     <nav id="navbar">
+        <div class="logo">SARAWIN</div>
+        <ul class="nav-links">
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+     </nav>
+
+     <!-- Hero Section -->
+      <section id="hero">
+        <h1>SARAWIN BUAKAEW</h1>
+        <p>Hello! I'm Instrumentation System Engineer</p> 
+        <a href="#skills" class="btn">Explore More</a>
+      </section>
+
+      <!-- Skills Section --> 
+       <section id="skills">
+        <div class="skills-container">
+            <div class="education">
+                <h2>EDUCATION</h2>
+                <p><strong>KingMongKut's University of Technology Nort Bangkok</strong><br>
+                    Bachelor's degree, Instrumetation System Engineer, 2.93GPA</p>
+                <p><strong></strong></p>
+            </div>
+
+            <div class="hard-skills">
+                <h2>HARD SKILLS</h2>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
-            </nav>
-        </div> 
-    </header>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Hello! I'm a web developer with a passion for creating beautiful and functional websites.</p>
-        </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-        <div class="container">
-            <h2>Projects</h2>
-            <div class="project-cards">
-                <div class="project-card">
-                    <h3>Project 1</h3>
-                    <p>Description of project 1</p>
-                </div>
-                <div class="project-card">
-                    <h3>Project 2</h3>
-                    <p>Description of project 2</p>
-                </div>
-                <div class="project-card">
-                    <h3>Project 3</h3>
-                    <p>Description of project 3</p>
-                </div>
+            </div>
+            <div class="soft-skills">
+                <h2>SOFT SKIILS</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
-    </section>
+       </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="container">
+       <!-- Project Section -->
+        <section class="projects">
+            <h2>PROJECT</h2>
+            <div class="project-container">
+                <div class="project-card">
+                    <h3>Project name</h3>
+                    <p></p>
+                </div>
+                <div class="project-card">
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact section -->
+        <section class="contact">
             <h2>Contact Me</h2>
-            <form id="contact-form">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <textarea id="message" placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
+            <p>Email: sarawinbuakaewpp@gmail.com</p>
+            <p>Linkedin: </p>
+        </section>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-        </div>
-    </footer>
+        <footer>
+            <p>2025 SarawinB- All Rights Reserved</p>
+        </footer>
 
-    <script src="scripts.js"></script>
+        <script src="/script.js"></script>
+
 </body>
 </html>
