Edit home page and Addition resume

--- a/index.html
+++ b/index.html
@@ -3,89 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SarawinB</title>
+    <title>Portfolio - Sarawin</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
-    <!-- Navigation bar -->
-     <nav id="navbar">
-        <div class="logo">SARAWIN</div>
-        <ul class="nav-links">
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-     </nav>
-
-     <!-- Hero Section -->
-      <section id="hero">
-        <h1>SARAWIN BUAKAEW</h1>
-        <p>Hello! I'm Instrumentation System Engineer</p> 
-        <a href="#skills" class="btn">Explore More</a>
-      </section>
-
-      <!-- Skills Section --> 
-       <section id="skills">
-        <div class="skills-container">
-            <div class="education">
-                <h2>EDUCATION</h2>
-                <p><strong>KingMongKut's University of Technology Nort Bangkok</strong><br>
-                    Bachelor's degree, Instrumetation System Engineer, 2.93GPA</p>
-                <p><strong></strong></p>
-            </div>
-
-            <div class="hard-skills">
-                <h2>HARD SKILLS</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-            <div class="soft-skills">
-                <h2>SOFT SKIILS</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="/resume.html">Resume</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="home" class="hero">
+        <div class="hero-content">
+            <img src="/images/profile.jpg" alt="Sarawin" class="profile-pic">
+            <h1>I'm Sarawin.</h1>
+            <p>An Electrical Engineer & Software Developer.</p>
+            <p>This portfolio showcases my experience in engineering, programming, and automation.</p>
+            <a href="#projects" class="btn">Show Work</a>
         </div>
-       </section>
+    </section>
 
-       <!-- Project Section -->
-        <section class="projects">
-            <h2>PROJECT</h2>
-            <div class="project-container">
-                <div class="project-card">
-                    <h3>Project name</h3>
-                    <p></p>
-                </div>
-                <div class="project-card">
-                    <h3></h3>
-                    <p></p>
-                </div>
-            </div>
-        </section>
+    
 
-        <!-- Contact section -->
-        <section class="contact">
-            <h2>Contact Me</h2>
-            <p>Email: sarawinbuakaewpp@gmail.com</p>
-            <p>Linkedin: </p>
-        </section>
-
-        <footer>
-            <p>2025 SarawinB- All Rights Reserved</p>
-        </footer>
-
-        <script src="/script.js"></script>
-
+    <footer>
+        <p>&copy; 2025 Sarawin. All rights reserved.</p>
+    </footer>
 </body>
 </html>
